# FlashCard

maestro-craft-studio-main/: README.md  flashcard_app_prd.md  index.html  package.json  tailwind.config.ts  vite.config.ts
maestro-craft-studio-main/src/: App.tsx  index.css
maestro-craft-studio-main/src-tauri/: Cargo.toml  tauri.conf.json
maestro-craft-studio-main/src-tauri/src/: main.rs
maestro-craft-studio-main/src/components/dashboard/: StatsCard.tsx
maestro-craft-studio-main/src/components/deck/: DeckCard.tsx
maestro-craft-studio-main/src/components/flashcard/: FlashcardPreview.tsx
maestro-craft-studio-main/src/components/layout/: AppLayout.tsx  AppSidebar.tsx
maestro-craft-studio-main/src/pages/: AIGeneratorPage.tsx  DecksPage.tsx  Index.tsx  SettingsPage.tsx  StudyPage.tsx
